B-F Backup Sandbox 30.4.12/src/objects/Outlet_Class_Market_Definition__c.object
<CustomObject>
    <description>INFOWELDERS - The Market&apos;s definition for each Class</description>
    <fields>
        <fullName>BF_Brand__c</fullName>
        <description>INFOWELDERS</description>
        <label>BF Brand</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer__c</fullName>
        <description>INFOWELDERS</description>
        <label>Consumer</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>INFOWELDERS</description>
        <label>Market</label>
        <referenceTo>Market__c</referenceTo>
        <relationshipLabel>Outlet Class Market Definitions</relationshipLabel>
        <relationshipName>Outlet_Class_Market_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monthly_Visit_Goal__c</fullName>
        <description>INFOWELDERS</description>
        <label>Monthly Visit Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outlet_Class__c</fullName>
        <description>INFOWELDERS</description>
        <label>Outlet Class</label>
        <referenceTo>Outlet_Class__c</referenceTo>
        <relationshipLabel>Outlet Class Market Definitions</relationshipLabel>
        <relationshipName>Outlet_Class_Market_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>POS__c</fullName>
        <description>INFOWELDERS</description>
        <label>POS</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotions__c</fullName>
        <description>INFOWELDERS</description>
        <label>Promotions</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X9L_Cases__c</fullName>
        <description>INFOWELDERS</description>
        <label>9L Cases</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Outlet Class Market Definition</label>
    <nameField>
        <label>Outlet Class Definition</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outlet Class Market Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>